[gd_scene load_steps=14 format=2]

[ext_resource path="res://CardScenes/AttackBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Cards/BordersAndBacks/Attack/Square_Face.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cards/Units/Attack/Strike.png" type="Texture" id=3]
[ext_resource path="res://Assets/Cards/BordersAndBacks/Grey/Square_Frame.png" type="Texture" id=4]
[ext_resource path="res://Assets/Cards/BordersAndBacks/Grey/Banner.png" type="Texture" id=5]
[ext_resource path="res://Assets/Cards/BordersAndBacks/Attack/Energy.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Cards/BordersAndBacks/Back_Texture.png" type="Texture" id=8]
[ext_resource path="res://Assets/Cards/BordersAndBacks/cardborder.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 3
outline_color = Color( 0.027451, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 55
outline_size = 3
outline_color = Color( 0.027451, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/Comfortaa-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 3
outline_color = Color( 0.027451, 0.0196078, 0.0196078, 1 )
font_data = SubResource( 3 )

[node name="AttackBase" type="MarginContainer"]
margin_right = 250.0
margin_bottom = 350.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Face" type="Sprite" parent="."]
position = Vector2( -0.0918274, 0.244507 )
scale = Vector2( 0.417155, 0.421038 )
texture = ExtResource( 2 )
centered = false

[node name="Description" type="Label" parent="Face"]
margin_left = 51.0
margin_top = 476.0
margin_right = 554.0
margin_bottom = 783.0
custom_fonts/font = SubResource( 1 )
text = "Deal 8 Damage.
Ignore Enemy Block."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Sprite" parent="."]
position = Vector2( 18.0101, 20.121 )
scale = Vector2( 0.77511, 0.594471 )
texture = ExtResource( 3 )
centered = false

[node name="Frame" type="Sprite" parent="."]
position = Vector2( -99.2398, -53.3071 )
scale = Vector2( 0.437336, 0.433355 )
texture = ExtResource( 4 )
centered = false

[node name="Focus" type="TextureButton" parent="."]
margin_right = 250.0
margin_bottom = 350.0
texture_hover = ExtResource( 9 )
expand = true

[node name="Banner" type="Sprite" parent="."]
position = Vector2( -72.4001, -48.4241 )
scale = Vector2( 0.384094, 0.385044 )
texture = ExtResource( 5 )
centered = false

[node name="NameText" type="Label" parent="Banner"]
margin_left = 191.0
margin_top = 147.0
margin_right = 831.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )
text = "Strike"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Sprite" parent="."]
position = Vector2( -20.5041, -22.9179 )
scale = Vector2( 0.394704, 0.402843 )
texture = ExtResource( 6 )
centered = false

[node name="CostText" type="Label" parent="Cost"]
margin_left = 58.8384
margin_top = 52.0706
margin_right = 98.8384
margin_bottom = 120.071
custom_fonts/font = SubResource( 4 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Sprite" parent="."]
scale = Vector2( 6.23501, 6.22755 )
texture = ExtResource( 8 )
centered = false

[connection signal="mouse_entered" from="Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_Focus_mouse_exited"]
